# Project2

./: .gitignore  repo.txt
Project2/: Benchmarking.html  Cargo.toml  MIT License
Project2/benches/: my_benchmark.rs
Project2/benches/criterion/AVLTree/base/: benchmark.json  tukey.json
Project2/benches/criterion/AVLTree/change/: estimates.json
Project2/benches/criterion/AVLTree/new/: estimates.json  raw.csv  sample.json
Project2/benches/criterion/AVLTree/report/: index.html
Project2/benches/criterion/AVLTree_2/base/: estimates.json  tukey.json
Project2/benches/criterion/AVLTree_2/new/: benchmark.json  raw.csv  sample.json
Project2/benches/criterion/AVLTree_2/report/: index.html
Project2/benches/criterion/AVLTree_3/base/: benchmark.json  estimates.json
Project2/benches/criterion/AVLTree_3/new/: raw.csv  sample.json  tukey.json
Project2/benches/criterion/AVLTree_3/report/: index.html
Project2/benches/criterion/AVLTree_4/base/: benchmark.json  raw.csv  tukey.json
Project2/benches/criterion/AVLTree_4/new/: estimates.json  sample.json
Project2/benches/criterion/AVLTree_4/report/: index.html
Project2/benches/criterion/AVLTree_5/base/: benchmark.json  sample.json  tukey.json
Project2/benches/criterion/AVLTree_5/new/: estimates.json  raw.csv
Project2/benches/criterion/AVLTree_5/report/: index.html
Project2/benches/criterion/BinaryTree/base/: estimates.json  raw.csv  (+1 more)
Project2/benches/criterion/report/: index.html
Project2/src/: avl_tree.rs  binary_tree.rs  command_line_interface.rs  lib.rs  main.rs  pretty_print.rs  red_black_tree.rs
(+59 files in other folders)
