[package]
name = "Project2"
version = "0.1.0"
authors = ["Glenn, Tymoore, Michael, Andrew"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false