[package]
name = "Project2"
version = "0.1.0"
authors = ["Glenn, Tymoore, Michael, Andrew"]
edition = "2018"
description = "Implementations of red black tree and AVL tree"
documentation = "https://github.com/ECE421Group11/Project2"
homepage = "https://github.com/ECE421Group11/Project2"
repository = "https://github.com/ECE421Group11/Project2"
readme = "repo.txt"
keywords = ["redblacktree", "avltree", "tree", "rbtree"]
categories = ["data-structures", "algorithms"]
license = "license.txt"

[dependencies]
slab = "0.4.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false